# qtcreator-sphinx-plugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.rst  RELEASEINFO.md.in  RELEASENOTES.md  ReleaseNotes.md  Sphinx.json.in  Sphinx_de.ts  build.py  qtcreator-sphinx-plugin-projectsettings.cpp  qtcreator-sphinx-plugin-projectsettings.h  qtcreator-sphinx-plugin.cpp  qtcreator-sphinx-plugin.h  qtcreator-sphinx-plugin.pro  qtcreator-sphinx-plugin.qrc  qtcreator-sphinx-plugin_de_DE.ts  qtcreator-sphinx-plugin_global.h  qtcreator-sphinx-pluginconstants.h
.github/workflow/: build_qmake.yml
.github/workflows/: build_plugin.yml  build_qmake.yml
doc/: Installation.rst  Usage.md  Usage.rst  conf.py  index.rst
doc/templates/: highlighting.rst  rstcheck_warnng.rst
editor/: Constants.h  SphinxCodeModel.cpp  SphinxCodeModel.h  SphinxCodeStylePreferencesFactory.cpp  SphinxCodeStylePreferencesFactory.h  SphinxCompletionAssist.cpp  SphinxCompletionAssist.h  SphinxDocument.cpp  SphinxDocument.h  SphinxEditor.cpp  SphinxEditor.h  SphinxEditorFactory.cpp  SphinxEditorFactory.h  SphinxEditorWidget.cpp  SphinxEditorWidget.h  SphinxFormatActions.cpp  SphinxFormatActions.h  SphinxFormatter.cpp  SphinxFormatter.h  SphinxHighlighter.cpp  SphinxHighlighter.h  SphinxHtmlPage.cpp  SphinxHtmlPage.h  SphinxIndenter.cpp  SphinxIndenter.h  SphinxLivePreviewPage.cpp  SphinxLivePreviewPage.h  SphinxOutputParser.cpp  SphinxOutputParser.h  SphinxParser.cpp  SphinxParser.h  SphinxPreviewPage.cpp  SphinxPreviewPage.h  SphinxRegularExpressions.cpp  SphinxRegularExpressions.h  SphinxRest2Html.cpp  SphinxRest2Html.h  SphinxRightPaneWidget.cpp  SphinxRightPaneWidget.h  SphinxRstcheckHighlighter.cpp  (+3 more)
images/: images.txt
options/: SphinxOptionsPage.cpp  SphinxOptionsPage.h  SphinxOptionsWidget.cpp  SphinxOptionsWidget.h  SphinxSettings.cpp  SphinxSettings.h
share/qtcreator/snippets/: rst.xml  sphinx.xml
share/qtcreator/sphinx/: rest_check.py
share/qtcreator/sphinx/model/: model.xsd  restructuredText.xml  sphinx.xml  xml.xsd
share/qtcreator/sphinx/rst2html/: protocol_data_parser.py  rest_to_html.py
share/qtcreator/sphinx/rstcheck/: protocol_data_parser.py  rest_check.py
tests/: tst_completion.cpp  tst_completion.h  tst_formatter.cpp  tst_formatter.h  tst_rightpane.cpp  tst_rightpane.h
tests/test_files/: rstcheck_warnings.rst  rstcheck_warnings_include.rst  rstcheck_warnings_included.rst
